# faralpha-blog

./: .env  .gitignore  README.md  creds  pyproject.toml  start.sh
data/raw/: nse_equity_list.csv
results/: breadth_light_sweep.csv  breadth_reduce_sweep.csv  combined_sweep.csv  combined_sweep_log.txt  depth_filter_sweep.csv  depth_sweep_log.txt  vshape_accuracy_sweep.csv  vshape_sweep_log.txt
scripts/: migrate_duckdb_to_postgres.py  sweep_breadth_light.py  sweep_breadth_reduce.py  sweep_combined.py  sweep_depth_filter.py  sweep_vshape_accuracy.py
src/faralpha/: __init__.py  cli.py  config.py
src/faralpha/api/: app.py  helpers.py  pipeline.py  scheduler.py  state.py  sync_prices.py
src/faralpha/kite/: __init__.py  db_store.py  fetch_intraday.py  holdings.py  intraday_db.py  kite_orders.py  live_ticker.py  login.py  market_hours.py  order_manager.py  sl_manager.py  watchlist.py
src/faralpha/pipeline/: check_data.py  run_all.py  s01_universe.py  s02_prices.py  s02b_fundamentals.py  s03_features.py  s04_rs_rank.py  s05_patterns.py  s06_regime.py  s07_signals.py  s08_backtest.py
src/faralpha/utils/: db.py  logger.py  upsert.py
tests/: test_backtest_smoke.py  test_features_edge.py  test_patterns_smoke.py  test_prices_smoke.py
ui/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
ui/src/: App.tsx  api.ts  index.css  types.ts
ui/src/components/: AlertsFeed.tsx  BacktestPanel.tsx  Header.tsx  IntradayPanel.tsx  KiteLogin.tsx  PositionsPanel.tsx  RegimeCard.tsx  ScannerControl.tsx  SignalsTable.tsx  StrategyInsight.tsx  SyncPanel.tsx
(+10 files in other folders)
