[project]
name = "faralpha-quant-trader"
version = "0.1.0"
description = "Production-grade quant research platform — Minervini SEPA momentum strategy for India (NSE) equities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Data
    "yfinance>=0.2.31",
    "duckdb>=1.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=15.0.0",
    # Technical analysis
    "ta>=0.11.0",
    # Scraping / HTTP
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    # Broker
    "kiteconnect>=5.0.0",
    # Viz
    "matplotlib>=3.8.0",
    # Utils
    "tqdm>=4.66.0",
    "scipy>=1.12.0",
    # API / Dashboard
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
notebook = [
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.0.0",
]

[project.scripts]
fqt = "faralpha.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/faralpha"]
